@@ -93,7 +93,30 @@ public abstract class AbstractTreeNode implements TreeNodeWithChangeSupport {
 	}
 
 	/**
+	 * Constructor for cloning. {@link AbstractTreeNode} has two properties:
+	 * {@link #parent} and {@link #listOfListeners}. Both of them are not cloned
+	 * by this method, for two reasons:
+	 * <ul>
+	 * <li>
+	 * The {@link #parent} is not cloned and is left as <code>null</code>
+	 * because the new {@link AbstractTreeNode} will get a parent set as soon as
+	 * it is added/linked again to a {@link Model} somehow, but cloning the
+	 * parent could lead to an infinite loop.</li>
+	 * <li>{@link #listOfListeners} is needed in all other setXX() methods.
+	 * Cloning these might lead to strange and unexpected behavior, because when
+	 * doing a deep cloning, the listeners of the old object would suddenly be
+	 * informed about all value changes within this new object. Since we do
+	 * cloning, all values of all child elements have to be touched, i.e., all
+	 * listeners would be informed many times, but each time receive the
+	 * identical value as it was before. Since it is totally unclear of which
+	 * type listeners are, a deep cloning of these is not possible.</li>
+	 * </ul>
+	 * Therefore, it is necessary to keep in mind that the parent of the clone
+	 * will be null and that you have to care by yourself if you are using
+	 * {@link TreeNodeChangeListener}s.
+	 * 
 	 * @param node
+	 *            The original {@link TreeNode} to be cloned.
 	 */
 	public AbstractTreeNode(TreeNode node) {
 		this();
@@ -102,10 +125,13 @@ public abstract class AbstractTreeNode implements TreeNodeWithChangeSupport {
 		// again to a model somehow.		
 		// this.parent = node.getParent();
 		
-		// listOfListeners is needed in all other setXX() methods.
-		if (node instanceof AbstractTreeNode) {
-			this.listOfListeners.addAll(((AbstractTreeNode) node).listOfListeners);
-		}
+		/* listOfListeners is needed in all other setXX() methods.
+		 * Cloning these might lead to strange and unexpected behavior. 
+		 * This is actually not deep cloning anyway:
+		 */
+		// if (node instanceof AbstractTreeNode) {
+		//   this.listOfListeners.addAll(((AbstractTreeNode) node).listOfListeners);
+		// }
 	}
 
 	/*
